--- a/ÉttermiSzoftver/wndFoAblak.xaml
+++ b/ÉttermiSzoftver/wndFoAblak.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ÉttermiSzoftver"
         mc:Ignorable="d"
-        Title="Norbi's Restaurant" Height="768" Width="1280" Foreground="#FF2E2409">
+        Title="Norbi's Restaurant" Height="438" Width="731" Foreground="#FF2E2409">
     <Grid>
         <Grid >
             <Grid.RowDefinitions>
@@ -18,7 +18,7 @@
                         <StackPanel Orientation="Horizontal" />
                     </ItemsPanelTemplate>
                 </Menu.ItemsPanel>
-                <MenuItem Header="Étlap" x:Name="miEtlap" FontSize="20" FontFamily="Freestyle Script" >
+                <!--<MenuItem Header="Étlap" x:Name="miEtlap" FontSize="20" FontFamily="Freestyle Script" >
                     <MenuItem Header="Italok" x:Name="miItalok" FontFamily="Mistral" FontSize="15" Height="20" >
                         <MenuItem.Icon>
                             <Image Width="15" Height="15" Source="/Kepek/ital.png"/>
@@ -44,38 +44,39 @@
                             <Image Width="15" Height="14" Source="/Kepek/menu.png"/>
                         </MenuItem.Icon>
                     </MenuItem>
-                </MenuItem>
+                </MenuItem>-->
                 <MenuItem Header="Rendelés" x:Name="miRendeles" FontSize="20" FontFamily="Freestyle Script"  Visibility="Visible">
-                    <MenuItem Header="Felvétel" x:Name="miFelvetel" FontFamily="Mistral" FontSize="15" Height="20" Visibility="Visible">
+                    <MenuItem Header="Felvétel" x:Name="miFelvetel" FontFamily="Mistral" FontSize="15" Height="20" Visibility="Visible" Click="miFelvetel_Click">
                         <MenuItem.Icon>
                             <Image Width="15" Height="15" Source="/Kepek/plus.png"/>
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="Állapot" x:Name="miAllapot" FontFamily="Mistral" FontSize="15"  Height="20" Visibility="Visible">
+                    <MenuItem Header="Állapot" x:Name="miAllapot" FontFamily="Mistral" FontSize="15"  Height="20" Visibility="Visible" Click="miAllapot_Click">
                         <MenuItem.Icon>
                             <Image Width="15" Height="15" Source="/Kepek/info.png"/>
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="Számlakészítés" x:Name="miSzamla" FontSize="15" FontFamily="Mistral" Visibility="Visible"/>
+                    <MenuItem Header="Számlakészítés" x:Name="miSzamla" FontSize="15" FontFamily="Mistral" Visibility="Visible" Click="miSzamla_Click"/>
                 </MenuItem>
 
 
-                <MenuItem Header="Bejelentkezés" x:Name="miBejelentkezes" FontSize="20" FontFamily="Freestyle Script" Visibility="Visible" />
+                <MenuItem Header="Bejelentkezés" x:Name="miBejelentkezes" FontSize="20" FontFamily="Freestyle Script" Visibility="Visible" Click="miBejelentkezes_Click" />
                 <MenuItem Header="Admin" x:Name="miAdmin" FontSize="20" FontFamily="Freestyle Script" Visibility="Visible">
                     <MenuItem Header="Kimutatások" x:Name="miKimutatás" FontSize="20" FontFamily="Freestyle Script" >
-                        <MenuItem Header="Legnépszerûbb ételek" x:Name="miLegnepszerubb" FontFamily="Mistral" FontSize="15" Height="20"/>
+                        <MenuItem Header="Legnépszerûbb ételek" x:Name="miLegnepszerubb" FontFamily="Mistral" FontSize="15" Height="20" Click="miLegnepszerubb_Click"/>
                         <MenuItem Header="Bevétel" x:Name="miBevetel" FontFamily="Mistral" FontSize="15" Height="20">
-                            <MenuItem Header="Napi" x:Name="miNapi" Height="20" />
-                            <MenuItem Header="Heti" x:Name="miHeti" Height="20"/>
-                            <MenuItem Header="Havi" x:Name="miHavi" Height="20"/>
+                            <MenuItem Header="Napi" x:Name="miNapi" Height="20" Click="miNapi_Click" />
+                            <MenuItem Header="Heti" x:Name="miHeti" Height="20" Click="miHeti_Click"/>
+                            <MenuItem Header="Havi" x:Name="miHavi" Height="20" Click="miHavi_Click"/>
                         </MenuItem>
                     </MenuItem>
-                    <MenuItem Header="Pincérek" x:Name="miPincer" FontSize="20" FontFamily="Freestyle Script"  />
+                    <MenuItem Header="Pincérek" x:Name="miPincer" FontSize="20" FontFamily="Freestyle Script" Click="miPincer_Click"  />
                 </MenuItem>
+                <MenuItem Header="Kijelentkezés" x:Name="miKijelentkezes" FontSize="20" FontFamily="Freestyle Script" Visibility="Collapsed" />
             </Menu>
             <Image x:Name="imFoKep" Grid.Row="1" Source="Kepek/foKep.jpg" Stretch="Fill" />
-
-
+            
         </Grid>
     </Grid>
+
 </Window>
